List of Objects in Collections got replaced with Maps, Adapted to changes in Core. Updated to Java Version 20